--- a/_posts/2018-01-10-12-guitar-cab.md
+++ b/_posts/2018-01-10-12-guitar-cab.md
@@ -28,35 +28,25 @@ I had wood from a previous (cat) project, so I decided to re-use it too.
 
 Also I had some 2"x2" that helped me assembling the cab.
 
-![cab](/assets/img/IMG_20170909_092905019.jpg)
-
-![cab](/assets/img/IMG_20170909_092916274.jpg)
+| ![cab](/assets/img/IMG_20170909_092905019.jpg) | ![cab](/assets/img/IMG_20170909_092916274.jpg) |
 
 We can't see on the pictures but I also made a 12 inches hole in another plank of wood for the front side.
 Then, some colored taint (find the one you like in your usual store).
 
-![cab](/assets/img/IMG_20170911_190227201.jpg)
-
-![cab](/assets/img/IMG_20170911_190235394.jpg)
+| ![cab](/assets/img/IMG_20170911_190227201.jpg) | ![cab](/assets/img/IMG_20170911_190235394.jpg) |
 
 Put the grill cloth and the speaker
 
-![cab](/assets/img/IMG_20170923_174647789.jpg)
-
-![cab](/assets/img/IMG_20170923_174651880.jpg)
+| ![cab](/assets/img/IMG_20170923_174647789.jpg) | ![cab](/assets/img/IMG_20170923_174651880.jpg) |
 
 Close the back and put the accessories.
 
-![cab](/assets/img/IMG_20170923_175308730.jpg)
+| ![cab](/assets/img/IMG_20170923_175308730.jpg) | ![cab](/assets/img/IMG_20170923_175311221.jpg) |
 
-![cab](/assets/img/IMG_20170923_175311221.jpg)
-
-![cab](/assets/img/IMG_20170923_175313751.jpg)
+| ![cab](/assets/img/IMG_20170923_175313751.jpg) |
 
 Tadaaaa! A 12" guitar cab with a Celestion Vintage 30 for half of the price!
 
-![cab](/assets/img/IMG_20170923_175323761.jpg)
+| ![cab](/assets/img/IMG_20170923_175323761.jpg) | ![cab](/assets/img/IMG_20170923_175326604.jpg) | 
 
-![cab](/assets/img/IMG_20170923_175326604.jpg)
-
-![cab](/assets/img/IMG_20170923_175533011.jpg)
+| ![cab](/assets/img/IMG_20170923_175533011.jpg) |
